--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body{
 .container{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.png);
+    background-image: url(images/background.jpg);
     background-size: cover;
     background-position: center;
     
@@ -37,17 +37,17 @@ button,input,select{
     height: 100px;
     border: 1px solid #fbfcfd;
     margin: 15px auto;
-    background-color: #12bfb4;
+    background-color: #179e95;
     padding: 5px 0;
     border-radius: 10px;
 
 }
 .box_error{
-    width: 5%;
+    width: 10%;
     height: 50px;
     border: 1px solid #fbfcfd;
     margin: 15px auto;
-    background-color: #12bfb4;
+    background-color: #179e95;
     padding: 5px 0;
     border-radius: 10px;
 }
@@ -70,6 +70,22 @@ header{
     bottom: -70px;
     
 }
+.info{
+    width: 20%;
+    /* height: 100px; */
+    border: 1px solid #fbfcfd;
+    margin: 15px auto;
+    background-color: #179e95;
+    padding: 5px 0;
+    border-radius: 10px;
+}
+h2{
+    color: #fbfcfd;
+    text-align: center;
+    margin: auto auto;
+    /* margin-top: 12px; */
+    font-size: 20px;
+}
 
 main{
     text-align: center;
@@ -84,7 +100,8 @@ main{
         margin: 20px auto;
         border-radius: 10px;
         border : 1px solid #ffffff;
-        background: #12bfb4;
+        /* background: #12bfb4; */
+        background: #179e95;
         padding: 5px 5px;
         overflow: auto;
         max-height: 30vh;
@@ -140,6 +157,13 @@ p{
     width: 35px;
 }
 
+@media (max-width:3060px){
+    .box_error{
+        width: 20%;
+    }
+}
+
+
 @media (max-width:1800px){
     .textarea{
         width: 30%;
@@ -152,8 +176,14 @@ p{
     .box_header{
         width: 30%;
     }
+    .info{
+        width: 30%;
+    }
     .output{
         width: 30%;
+    }
+    .box_error{
+        width: 20%;
     }
 }
 @media (max-width:1300px){
@@ -168,12 +198,25 @@ p{
     .box_header{
         width: 50%;
     }
+    .info{
+        width: 50%;
+    }
     .output{
         width: 50%;
     }
+    .box_error{
+        width: 25%;
+    }
 
 }
-@media all and (max-width:500px){
+
+@media (max-width:800px){
+    .box_error{
+        width: 35%;
+    }
+}
+
+@media all and (max-width:600px){
     .textarea{
         width: 90%;
         margin: 0 auto;
@@ -182,7 +225,22 @@ p{
     .box_header{
         width: 90%;
     }
+    .info{
+        width: 90%;
+    }
     .output{
+        width: 90%;
+    }
+    .box_error{
+        width: 90%;
+    }
+}
+@media (max-width:335px){
+    .box_header{
+        width: 90%;
+        height: 30%;
+    }
+    .box_error{
         width: 90%;
     }
 }
